platform-enterprise_versioned_docs/version-26.1/seqera-ai/index.md
---
title: "Seqera AI CLI"
description: "AI-powered assistant for bioinformatics workflows and Seqera Platform"
date: "2025-12-15"
tags: [seqera-ai, cli, ai]
---

:::caution Seqera AI CLI is in beta
Seqera AI CLI is currently in beta. Features and commands may change as we continue to improve the product.
:::

:::note
Seqera Cloud users receive $20 in free credits to get started with Seqera AI. [Contact us](https://seqera.io/platform/seqera-ai/request-credits/) for additional credits.
:::

Seqera AI CLI is an intelligent command-line assistant that helps you build, run, and manage bioinformatics workflows. Powered by advanced AI, it provides an interactive terminal experience for working with Nextflow pipelines and Seqera Platform.

Seqera AI has access to:

- **Your Seqera Platform workspace**: View and manage workflows, pipelines, and data through your authenticated account
- **Your local environment**: Execute commands and edit files in your working directory (with configurable approval controls)
- **AI capabilities**: Natural language understanding, code generation, and intelligent suggestions

## Seqera AI features

### Natural language interface

Interact with Seqera Platform using plain English. Ask questions, launch workflows, and manage pipelines through conversational commands.

### Workflow management

Launch, monitor, and debug Nextflow workflows directly from your terminal. Get real-time status updates, view logs, and analyze run metrics.

### Pipeline development

Generate Nextflow configurations, create pipeline schemas, and convert scripts from other workflow languages (WDL, Snakemake) to Nextflow.

### nf-core integration

Search and discover nf-core modules, get detailed execution information, and access ready-to-run Nextflow commands for over 1,000 standardized bioinformatics tools.

### Data management

Browse cloud storage through data links, manage datasets, generate download and upload URLs, and access reference genomes and sequencing data.

### Wave containers

Build containerized environments on-the-fly with conda packages, pip packages, or custom Docker images. Create reproducible containers for your bioinformatics tools without writing Dockerfiles.

### Local file operations

Edit files, run commands, and manage your local development environment with AI assistance and configurable approval modes.

### LSP code intelligence

Real-time error detection and AI-powered code navigation for Nextflow, Python, and R files in your workspace.

### Session management

Resume previous sessions to continue your work. Use `seqera ai -c` to continue your most recent session or `seqera ai -s <id>` to resume a specific session.

### Seqera Platform integration

Full access to Platform capabilities including compute environments, datasets, data links, and workspace management.

### Projects

Organize a workspace into projects by applying Seqera Platform labels prefixed with `project_`. Each project scopes the pipelines, datasets, workflow runs, and chat context the AI sees, without needing a separate CRUD surface in Seqera AI.

## Learn more

- [Installation](./installation.mdx): Detailed installation instructions
- [Authentication](./authentication.md): Log in, log out, and session management
- [Command approval](./command-approval.md): Control which commands run automatically
- [Use cases](./use-cases.md): Seqera AI CLI use cases
- [Projects](./projects.md): Organize workspace resources into projects using Platform labels
- [Troubleshooting](../troubleshooting_and_faqs/seqera-ai.md): Troubleshoot common errors
